--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Oh My! Cakes</title>
   <link rel="stylesheet" href="body.css" />
 </head>
-<body style="text-align: center; background-color: #f5d0e8;">
+<body>
   <!-- Logo -->
   <img src="logo.jpg" alt="Oh My logo" width="200" height="200" />
   <header style="background-color: #f29dae;">
