--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Logo -->
-  <img src="logo.jpg" alt="Oh My logo" width="200" height="200" />
+  <img src="logo.webp" alt="Oh My logo" width="200" height="200" />
   <header style="background-color: #f29dae;">
     <h1>Welcome to Oh My! Cakes</h1>
     <hr />
@@ -29,10 +29,10 @@
         <p>Where Every Bite Feels Like Home — made with love just for you.</p>
       </div>
       <div class="home-gallery">
-        <img src="image1.jpg" alt="Vanilla Cake" width="200" />
-        <img src="image2.jpg" alt="Chocolate Cake Slice" width="200" />
-        <img src="image3.jpg" alt="Red Velvet Cake" width="200" />
-        <img src="image4.jpg" alt="Lotus Cake" width="200" />
+        <img src="image1.webp" alt="Vanilla Cake" width="200" />
+        <img src="image2.webp" alt="Chocolate Cake Slice" width="200" />
+        <img src="image3.webp" alt="Red Velvet Cake" width="200" />
+        <img src="image4.webp" alt="Lotus Cake" width="200" />
       </div>
     </section>
 
@@ -45,7 +45,7 @@
       <article class="menu-item">
         <h3>Vanilla Cake</h3>
         <p>1kg – 40,000 TZS | ½kg – 25,000 TZS</p>
-        <img src="vannila.png" alt="Vanilla cake with frosting" width="400" />
+        <img src="vannila.webp" alt="Vanilla cake with frosting" width="400" />
         <ul>
           <li>Vanilla sponge cake with dried fruits</li>
           <li>Filled with fruit jam between layers</li>
@@ -57,7 +57,7 @@
       <article class="menu-item">
         <h3>Lemon/Orange Cake</h3>
         <p>1kg – 45,000 TZS | ½kg – 30,000 TZS</p>
-        <img src="orange cake.png" alt="Lemon or orange cake" width="400" />
+        <img src="orange cake.webp" alt="Lemon or orange cake" width="400" />
         <ul>
           <li>Citrus fruit sponge cake</li>
           <li>Filled with lemon/orange curd</li>
@@ -69,7 +69,7 @@
       <article class="menu-item">
         <h3>Chocolate Cake</h3>
         <p>1kg – 50,000 TZS | ½kg – 30,000 TZS</p>
-        <img src="chocolate cake.png" alt="Chocolate cake slice" width="400" />
+        <img src="chocolate cake.webp" alt="Chocolate cake slice" width="400" />
         <ul>
           <li>Rich chocolate chiffon cake</li>
           <li>Filled with chocolate ganache and caramel sauce</li>
@@ -82,7 +82,7 @@
       <article class="menu-item">
         <h3>Red Velvet Cake</h3>
         <p>1kg – 60,000 TZS | ½kg – 35,000 TZS</p>
-        <img src="Red velvet.png" alt="Red velvet cake topped with strawberries" width="500" height="500" />
+        <img src="Red velvet.webp" alt="Red velvet cake topped with strawberries" width="500" height="500" />
         <ul>
           <li>Original red velvet chiffon cake</li>
           <li>Filled with white chocolate ganache</li>
@@ -110,7 +110,7 @@
       <article class="menu-item">
         <h3>Lotus Biscoff Cake</h3>
         <p>1kg – 60,000 TZS (or available in slices)</p>
-        <img src="Lotus cake.png" alt="Lotus Biscoff cake" width="400" />
+        <img src="Lotus cake.webp" alt="Lotus Biscoff cake" width="400" />
         <ul>
           <li>Lotus sponge cake</li>
           <li>Filled with Lotus spread and biscuit crumbs</li>
@@ -124,9 +124,9 @@
         <p>Specially designed for our lovely customers: portable, easy to carry, and very affordable!</p>
         <ul>
           <li>Chocolate Cups – 8,000 TZS</li>
-          <img src="Chocolate cups.png" alt="Chocolate cup cakes" width="500" />
+          <img src="Chocolate cups.webp" alt="Chocolate cup cakes" width="500" />
           <li>Red Velvet Cups – 6,000 TZS</li>
-          <img src="Red velvet cups.png" alt="Red velvet cup cakes" width="400" />
+          <img src="Red velvet cups.webp" alt="Red velvet cup cakes" width="400" />
         </ul>
       </article>
     </section>
